Optimisation Moteur de recherche

--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
                     <span>•</span>
                     <a href="#" class="hover:text-gray-600">Politique de Confidentialité</a>
                 </div>
-                <p class="text-xs text-gray-300 italic">Site web propulsé avec amour.</p>
+                <p class="text-xs text-gray-300 italic">Site web propulsé avec amour :)</p>
             </div>
         </div>
     </footer>
