--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
                             class="h-full min-h-[400px] rounded-3xl overflow-hidden shadow-xl border border-gray-100 relative group">
                             <a href="https://www.google.com/maps/search/?api=1&query=43.612417,6.730444" target="_blank"
                                 class="block w-full h-full relative cursor-pointer" aria-label="Voir sur Google Maps">
-                                <img src="assets/images/map-preview.png" alt="Plan d'accès Les Lavandins"
+                                <img src="assets/images/map-preview.webp" alt="Plan d'accès Les Lavandins"
                                     class="w-full h-full object-cover transition duration-500 group-hover:scale-105 group-hover:opacity-95">
                                 <div
                                     class="absolute inset-0 bg-black/0 group-hover:bg-black/5 transition duration-500 flex items-center justify-center">
