--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 
     <!-- La description courte sous le lien bleu dans Google. Doit donner envie de cliquer. -->
     <meta name="description"
-        content="Découvrez Les Lavandins : location d'un T1 de 40m² de plain-pied pour 3-4 personnes à Tourettes (Var). Proche Lac St-Cassien, à 35km de la mer. Calme et confort.">
+        content="Découvrez Les Lavandins : location d'un T1 de 40m² de plain-pied pour 3-4 personnes à Tourrettes (Var). Proche Lac St-Cassien, à 35km de la mer. Calme et confort.">
 
     <!-- Indique à Google quelle est l'adresse "officielle" de cette page (évite le contenu dupliqué) -->
     <link rel="canonical" href="https://lavandins.eu" />
 
     <!-- Liste de mots-clés -->
     <meta name="keywords"
-        content="location vacances var, gite tourettes, T1 indépendant provence, location lac saint cassien, hébergement var 4 personnes">
+        content="location vacances var, gite Tourrettes, T1 indépendant provence, location lac saint cassien, hébergement var 4 personnes">
 
     <meta name="author" content="Les Lavandins">
 
@@ -39,7 +39,7 @@
 
     <!-- === GÉOLOCALISATION === -->
     <meta name="geo.region" content="FR-83">
-    <meta name="geo.placename" content="Tourettes">
+    <meta name="geo.placename" content="Tourrettes">
     <meta name="geo.position" content="43.612417;6.730444">
     <meta name="ICBM" content="43.612417, 6.730444">
 
@@ -48,7 +48,7 @@
     <meta property="og:url" content="https://lavandins.eu">
     <meta property="og:title" content="Les Lavandins - Votre cocon en Provence">
     <meta property="og:description"
-        content="Location T1 de charme à Tourettes (Var). Proche Lac St-Cassien et Mer. Idéal 3-4 personnes.">
+        content="Location T1 de charme à Tourrettes (Var). Proche Lac St-Cassien et Mer. Idéal 3-4 personnes.">
     <meta property="og:image" content="assets/images/hero-bg.webp">
     <meta property="og:locale" content="fr_FR">
 
@@ -66,7 +66,7 @@
       ],
       "address": {
         "@type": "PostalAddress",
-        "addressLocality": "Tourettes",
+        "addressLocality": "Tourrettes",
         "addressRegion": "Var",
         "postalCode": "83440",
         "addressCountry": "FR"
@@ -188,7 +188,7 @@
         <!-- ================================================================== -->
         <section id="accueil" class="h-[70vh] min-h-[500px] flex items-center justify-center relative">
             <div class="absolute inset-0 bg-black/40 z-10"></div>
-            <img src="assets/images/hero-bg.webp" alt="Vue panoramique Provence et champs de lavande à Tourettes (Var)"
+            <img src="assets/images/hero-bg.webp" alt="Vue panoramique Provence et champs de lavande à Tourrettes (Var)"
                 class="absolute inset-0 w-full h-full object-cover">
 
             <div class="relative z-20 text-center text-white p-6 max-w-4xl">
@@ -196,7 +196,7 @@
                     Les Lavandins : Location T1 de Charme en Provence
                 </h1>
                 <p class="text-xl sm:text-2xl font-light drop-shadow-lg mb-8 italic">
-                    Escale Varoise à Tourettes : le calme de la terre, l'appel de la mer.
+                    Escale Varoise à Tourrettes : le calme de la terre, l'appel de la mer.
                 </p>
                 <a href="#appartement"
                     class="inline-block bg-white text-provence-primary px-8 py-3 rounded-full font-bold text-lg hover:bg-provence-bg transition duration-300 shadow-xl">
@@ -222,7 +222,7 @@
                     <p class="text-xl leading-relaxed mb-10 text-gray-700">
                         Bienvenue dans votre appartement T1 de 40m², indépendant et de plain-pied, au sein de la villa
                         **Les Lavandins**. Idéal pour 3 à 4 personnes, vous profiterez du calme de la Provence tout en
-                        restant à deux pas des commerces du village de Tourettes.
+                        restant à deux pas des commerces du village de Tourrettes.
                     </p>
 
                     <div class="grid md:grid-cols-2 gap-12">
@@ -379,7 +379,7 @@
                     <div
                         class="group relative overflow-hidden rounded-2xl shadow-lg aspect-[4/3] cursor-pointer lightbox-trigger">
                         <img src="assets/images/exterior-garden.webp" data-full="assets/images/exterior-garden.webp"
-                            alt="Extérieur villa et jardin Les Lavandins Tourettes"
+                            alt="Extérieur villa et jardin Les Lavandins Tourrettes"
                             class="w-full h-full object-cover transition duration-500 group-hover:scale-110">
                         <div
                             class="absolute inset-0 bg-black/20 group-hover:bg-black/10 transition duration-500 flex items-center justify-center">
@@ -610,7 +610,7 @@
                     <ul class="space-y-3 text-sm text-gray-500">
                         <li class="flex items-start">
                             <span class="mr-2 mt-0.5">📍</span>
-                            <span>Tourettes, Var (83440)<br>Provence-Alpes-Côte d'Azur</span>
+                            <span>Tourrettes, Var (83440)<br>Provence-Alpes-Côte d'Azur</span>
                         </li>
                         <li class="flex items-center">
                             <span class="mr-2">📞</span>
