--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <section id="accueil" class="h-[70vh] min-h-[500px] flex items-center justify-center relative">
             <div class="absolute inset-0 bg-black/40 z-10"></div>
             <img src="assets/images/hero-bg.webp" alt="Vue panoramique Provence et champs de lavande à Tourrettes (Var)"
-                class="absolute inset-0 w-full h-full object-cover">
+                class="absolute inset-0 w-full h-full object-cover" fetchpriority="high">
 
             <div class="relative z-20 text-center text-white p-6 max-w-4xl">
                 <h1 class="font-heading text-4xl sm:text-6xl font-semibold drop-shadow-2xl mb-4">
