Moteur de recherche activé

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <!-- FAVICON (Petite icône dans l'onglet) -->
     <link rel="icon" href="assets/images/favicon.svg">
 
-    <!-- !!! ATTENTION : MODE PRIVÉ ACTIVÉ !!! -->
-    <meta name="robots" content="noindex, nofollow">
+    <!-- !!! ATTENTION : MODE PUBLIC ACTIVÉ !!! -->
+    <meta name="robots" content="index, follow">
 
     <!-- === GÉOLOCALISATION === -->
     <meta name="geo.region" content="FR-83">
